Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* prefer 0755 permissions for binpkg package dir.

* pinspect pkgset learned --all option, to display all pkgsets it knows.


pkgcore 0.6.1: May 22nd, 2011

* fix for "or_node.blocks" AttributeError, and related resolution
  miscalculations.

* fix exit code return for ebuild helpers throwing warnings for <EAPI4

* fix typo in FEATURES=buildsyspkg, and FEATURES=buildpkg

* check to ensure pkgdir exists; if possible, create it, else turn off binpkg
  features.


pkgcore 0.6: April 24th, 2011

* Due to crazy work hours and moves, this release is fairly large, and frankly
  repeatedly delayed.  Future ones will be far more fine grained moving forward.

* Fix python2.7 incompatiblity in pkgcore.ebuild.misc

* It's suggested that folks use bash 4.1, primarily for regen
  speed reasons- it is not required however.

* bash spawning now enforce --norc and --noprofile in full.

* RESTRICT is now properly use evaluated.

* pkgcore.restrictions.values.ContainmentMatch is deprecated in favor of
  ContainmentMatch2.  Update your code- by pkgcore 0.7, ContainmentMatch
  will become ContainmentMatch2, and a shim will be left in place.

* introduction of EAPI objects (pkgcore.ebuild.eapi) for controlling/defining
  new eapi's, capabilities, etc.

* pmaint regen is now cumulatively ~23x faster then the previous release.
  This is via restoration of original metadata regeneration speeds, and
  via enabling an eclass preloading optimization.  No impact on metadata-
  just far faster regeneration.

* Roughly a 15x speedup in general metadata regeneration; basically rework
  a fix that was added to to 0.5.11 (dealing with portage induced
  breakage in env loadup from their declare usage).

* filter-env regex backend now uses python's re always; previously
  if the extension was active it would use posix regex.
