@@ -4,6 +4,11 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* add incrementalism between make.globals and make.conf to match changes
+  in portage configuration parsing.  This fixes the common "I tried pkgcore
+  and everything was license masked".  Breakage there owes to portage
+  changing make.globals; can't do much about it unfortunately.
+
 * prefer 0755 permissions for binpkg package dir.
 
 * pinspect pkgset learned --all option, to display all pkgsets it knows.
